@@ -4,6 +4,10 @@ Changelog
 1.0b7 - unreleased
 ------------------
 
+* Fixed deadlock in synchronized methods of schema cache by using
+  threading.RLock instead of threading.Lock.
+  [jbaumann]
+
 * Add Spanish translation.
   [dukebody]
 
